Bug#41068: at chassis startup, increase the max number of open files to 8192 or the content of the new --max-open-files option.